# interface_meshvalmet

./: CMakeLists.txt  README.md  sample_mesh_gt.vtk  sample_mesh_seg.vtk
src/: compare_meshes.cpp  example.cpp
src/MeshValmet/lib3d/: model_in.h  model_in_ply.cxx
src/wrapper/: CompareMeshes.cpp  CompareMeshes.h  VTK_to_MeshValmet.h  vtkPLYStreamWriter.cpp  vtkPLYStreamWriter.h
